--- a/second.html
+++ b/second.html
@@ -46,7 +46,7 @@
         </setion>
 
         <section>
-            <h2 class="p1">Place I like to visit</h2>
+            <h2 id="p1">Place I like to visit</h2>
             <li class="list-p">Dhaka</li>
             <li>Sylhet</li>
             <li>Khulna</li>
